# logger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: color.h  logger.h
src/: CMakeLists.txt  logger.c  logger_unix_file_service.c
test/: CMakeLists.txt  logger_tests.c
